Fixed admin side, image wrap.

--- a/css/admin.css
+++ b/css/admin.css
@@ -309,8 +309,16 @@
   gap: var(--g-16-card-item);
 }
 
+.stock-img-container {
+  max-width: 100%;
+  height: 10rem;
+  overflow: hidden;
+}
+
 .stock-img img {
-  width: 30%;
+  object-fit: scale-down;
+  min-width: 100%;
+  max-height: 100%;
 }
 
 .stock-product figcaption {
